--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Antigravity 3</title>
+    <title>Antigravity 3-Jose Maria Mangas</title>
     <style>
         html,
         body {
@@ -908,5 +908,6 @@
         })();
     </script>
 </body>
+
 
 </html>
